--- a/views/article.ejs
+++ b/views/article.ejs
@@ -6,7 +6,7 @@
     <meta name="description" content="Showcases a horizontal menu that hides at
      small window widths, and which scrolls when revealed.">    <title>Large Medium Small</title>    
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css" integrity="sha384-" crossorigin="anonymous">
-    
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/grids-responsive-min.css">
     
     
 </head>
@@ -162,7 +162,7 @@
         overflow: hidden;
     }
 
-    .main{
+    .article-main{
         margin:40px auto;
         max-width:650px;
         line-height:1.6;
@@ -199,18 +199,26 @@ document.getElementById('toggle').addEventListener('click', function (e) {
 });
 })(this, this.document);
 </script>
-<style>
+<!-- <style>
 .main {
     padding: 2em;
     color: black;
 }
-</style>
+</style> -->
 
-<div class="main">
+
+<div class="pure-g">
+    <div class="pure-u-1 pure-u-md-1-3"> </div>
+    <div class="pure-u-1 pure-u-md-1-3"> <div class="article-main">
 
     <%- art_content %>
 
+</div> </div>
+    <!-- <div class="pure-u-1 pure-u-md-1-3"></div> -->
 </div>
+
+
+
 
 
 </body>
