--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,12 +7,21 @@
      small window widths, and which scrolls when revealed.">    <title>Large Medium Small</title>    
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css" integrity="sha384-" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/grids-responsive-min.css">
-    
+    <link href="https://fonts.googleapis.com/css?family=Gudea&display=swap&text=1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz%20%27%22" rel="stylesheet"> 
     
 </head>
 <body>
 
 <style>
+
+.main{
+    font-family: 'Gudea', sans-serif;
+    line-height: 2.2em;
+}
+
+.content{
+    text-align: center;
+}
 
 .title-large {
     font-size:180%;
@@ -211,17 +220,21 @@ document.getElementById('toggle').addEventListener('click', function (e) {
 </style>
 
 <div class="main">
-    <span class="title-large">Large, </span> <span class="title-medium">Medium, </span> <span class="title-small">Small</span>
-    <h3>An ultralight Medium article reader</h3>
+<div class="pure-u-1 pure-u-md-1-3"> </div>
+    <div class="pure-u-1 pure-u-md-1-3"> 
+        <div class="content">
+            <span class="title-large">Large, </span> <span class="title-medium">Medium, </span> <span class="title-small">Small</span>
+            <h3>An ultralight Medium article reader</h3>
 
-    <!-- <p>Paste a URL to a medium article here:</p> -->
+            <!-- <p>Paste a URL to a medium article here:</p> -->
 
-     <form action="/getarticle" method="post">
-      Paste the Medium article's URL here:<br>
-      <input type="url" name="art_url"><br><br>
-      <input type="submit" class="pure-button pure-button-primary" value="Show Me The Article">
-    </form> 
-
+             <form action="/getarticle" method="post">
+              Paste the Medium article's URL here:<br>
+              <input type="url" name="art_url"><br><br>
+              <input type="submit" class="pure-button pure-button-primary" value="Make it Small">
+            </form> 
+        </div>
+    </div>
 </div>
 
 
