--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Showcases a horizontal menu that hides at
-     small window widths, and which scrolls when revealed.">    <title>Large Medium Small</title>    
+    <meta name="description" content="An ultralight Medium article reader. Zero fuss, zero javascript, straight to the good bits.">
+    <title>Large Medium Small</title>    
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css" integrity="sha384-" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/grids-responsive-min.css">
     <link href="https://fonts.googleapis.com/css?family=Gudea&display=swap&text=1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz%20%27%22" rel="stylesheet"> 
