--- a/views/article.ejs
+++ b/views/article.ejs
@@ -203,12 +203,11 @@ h1,h2,h3{
     <div class="pure-menu pure-menu-horizontal pure-menu-scrollable custom-menu custom-menu-bottom custom-menu-tucked" id="tuckedMenu">
         <div class="custom-menu-screen"></div>
         <ul class="pure-menu-list">
-            <li class="pure-menu-item"><a href="#" class="pure-menu-link">Home</a></li>
+            <li class="pure-menu-item"><a href="../" class="pure-menu-link">Home</a></li>
             <li class="pure-menu-item"><a href="#" class="pure-menu-link">About</a></li>
-            <li class="pure-menu-item"><a href="#" class="pure-menu-link">Contact</a></li>
-            <li class="pure-menu-item"><a href="#" class="pure-menu-link">LinkedIn</a></li>
-            <li class="pure-menu-item"><a href="#" class="pure-menu-link">GitHub</a></li>
-            <li class="pure-menu-item"><a href="#" class="pure-menu-link">Twitter</a></li>
+            <li class="pure-menu-item"><a href="https://www.linkedin.com/in/shantanubhatia/" class="pure-menu-link">LinkedIn</a></li>
+            <li class="pure-menu-item"><a href="https://www.linkedin.com/in/shantanubhatia/" class="pure-menu-link">GitHub</a></li>
+            <li class="pure-menu-item"><a href="https://twitter.com/sb5455" class="pure-menu-link">Twitter</a></li>
         </ul>
     </div>
 </div>
