--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="An ultralight Medium article reader. Zero fuss, zero javascript, straight to the good bits.">
+    <meta name="description" content="An ultralight Medium article reader. Minimal fuss, Minimal javascript, straight to the good bits.">
     <title>Large Medium Small</title>    
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css" integrity="sha384-" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/grids-responsive-min.css">
